Further stylistic changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,62 +10,74 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Edinburgh travel</title>
 </head>
+
 <body>
     <section>
-<header>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="newsletter.html">Newsletter</a> 
-                </li>
-                <li>
-                    <a href="travel.html">Travel advice</a>  
-                </li>
-                <li>
-                    <a href="eat.html">Eat+Drink</a>  
-                </li>
-                <li>
-                    <a href="todo.html">Events</a> 
-                </li>
-                <li>
-                    <a href="index.html">Home</a> 
-                </li>
-            </ul>
-        </nav>
-        <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
-    </header>
+        <header>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="newsletter.html">Newsletter</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel advice</a>
+                    </li>
+                    <li>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="todo.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="index.html" id="love-edinburgh">
+                <h1>Love Edinburgh</h1>
+            </a>
+        </header>
     </section>
-<section id="hero-outer">
+    <section id="hero-outer">
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
-        <div id="intro-text">
-            <h3>Why visit Edinburgh?</h3>
-            <p>Edinburgh is an old historic city located in Southeastern Scotland with many historical landmarks and things to do for all age groups.
-            It is the Capital of Scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world. Love Edinburgh is here to provide recommendations of the best resturants and events to visit in and around Edinburgh.</p>
+            <div id="intro-text">
+                <h3>Why visit Edinburgh?</h3>
+                <p>Edinburgh is an old historic city located in Southeastern Scotland with many historical landmarks and
+                    things to do for all age groups.
+                    It is the Capital of Scotland and is home to the Edinburgh castle, a popular tourist destination for
+                    many people round the world. Love Edinburgh is here to provide recommendations of the best
+                    resturants and events to visit in and around Edinburgh.</p>
+            </div>
         </div>
-    </div>
-</section>
-<section>
-    <div id="welcome-video">
-        <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>    
-</section>
-<footer class="social-media">
-    <h3>Catch us on social media for more info on events and offers</h3>
-    <ul>
-        <li>
-            <a href="http://facebook.com" target="_blank" rel="noopener" 
-            aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
-            <a href="http://twitter.com" target="_blank" rel="noopener" 
-            aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
-        </li>
-        <li>
-            <a href="http://instagram.com" target="_blank" rel="noopener" 
-            aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-        </li>
-    </ul>
-</footer>
-<script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
+    </section>
+    <section>
+        <div id="welcome-video">
+            <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </section>
+    <footer class="social-media">
+        <h3>Catch us on social media for more info on events and offers</h3>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
