--- a/todo.html
+++ b/todo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,72 +10,84 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Edinburgh travel</title>
 </head>
+
 <body>
     <section>
         <header>
-                <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="newsletter.html">Newsletter</a> 
-                        </li>
-                        <li>
-                            <a href="travel.html">Travel advice</a>  
-                        </li>
-                        <li>
-                            <a href="eat.html">Eat+Drink</a>  
-                        </li>
-                        <li>
-                            <a href="todo.html">Events</a> 
-                        </li>
-                        <li>
-                            <a href="index.html">Home</a> 
-                        </li>
-                    </ul>
-                </nav>
-                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
-            </header>
-            </section>
-<h3 id="events-heading">
-    Edinburgh is home to world-class events and fesitvals. Here are some of the highlights...
-</h3>
-<section id="events-outer">
-    <div id="edfest" role="img" aria-label="People standing in theatre">
-        <div id="to-do-fringe">
-            <h3>Edinburgh Festival Fringe</h3>
-            <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every August where performers and tourists travels all over the world to perform or see over 4000 plus shows in the city.</p>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="newsletter.html">Newsletter</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel advice</a>
+                    </li>
+                    <li>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="todo.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="index.html" id="love-edinburgh">
+                <h1>Love Edinburgh</h1>
+            </a>
+        </header>
+    </section>
+    <h3 id="events-heading">
+        Events in Edinburgh
+    </h3>
+    <section id="events-outer">
+        <div id="edfest" role="img" aria-label="People standing in theatre">
+            <div id="to-do-fringe">
+                <h3>Edinburgh Festival Fringe</h3>
+                <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus
+                    performances. The city is full of creative energy every August where performers and tourists travels
+                    all over the world to perform or see over 4000 plus shows in the city.</p>
+            </div>
+            <div id="to-do-film">
+                <h3>Edinburgh International Film Festival</h3>
+                <p>Edinburgh International Film Festival happens every August and hosts a wealth of avante garde films
+                    from independent film makers. It's a must see!</p>
+            </div>
+            <div id="to-do-book">
+                <h3>Edinburgh International Book Festival</h3>
+                <p>Edinburgh International Book Festival happens every year where writers and literary lovers descend on
+                    the city and promote and share their literature. A must go for avid readers!</p>
+            </div>
+            <div id="to-do-music">
+                <h3>Edinburgh music festivals</h3>
+                <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and
+                    rock music head to the Connect festival. If you are a dance music lover why not check out Terminal V
+                    at the Royal Highland Centre.</p>
+            </div>
         </div>
-    <div id="to-do-film">
-        <h3>Edinburgh International Film Festival</h3>
-        <p>Edinburgh International Film Festival happens every August and hosts a wealth of avante garde films from independent film makers. It's a must see!</p>
-    </div>
-    <div id="to-do-book">
-        <h3>Edinburgh International Book Festival</h3>
-        <p>Edinburgh International Book Festival happens every year where writers and literary lovers descend on the city and promote and share their literature. A must go for avid readers!</p>
-    </div>
-    <div id="to-do-music">
-        <h3>Edinburgh music festivals</h3>
-        <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and rock music head to the Connect festival. If you are a dance music lover why not check out Terminal V at the Royal Highland Centre.</p>
-    </div>
-</div>
-</section>
+    </section>
 
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
             <li>
-                <a href="http://facebook.com" target="_blank" rel="noopener" 
-                aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank" rel="noopener" 
-                aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank" rel="noopener" 
-                aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
