--- a/eat.html
+++ b/eat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,66 +10,77 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Edinburgh travel</title>
 </head>
+
 <body>
     <section>
         <header>
-                <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="newsletter.html">Newsletter</a> 
-                        </li>
-                        <li>
-                            <a href="travel.html">Travel advice</a>  
-                        </li>
-                        <li>
-                            <a href="eat.html">Eat+Drink</a>  
-                        </li>
-                        <li>
-                            <a href="todo.html">Events</a> 
-                        </li>
-                        <li>
-                            <a href="index.html">Home</a> 
-                        </li>
-                    </ul>
-                </nav>
-                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
-            </header>
-            </section>
-`<section> 
-    <h3 id="eat-heading">Food and drink in Edinburgh</h3>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="newsletter.html">Newsletter</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel advice</a>
+                    </li>
+                    <li>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="todo.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="index.html" id="love-edinburgh">
+                <h1>Love Edinburgh</h1>
+            </a>
+        </header>
+    </section>
+    `<section>
+        <h3 id="eat-heading">Food and drink in Edinburgh</h3>
         <div id="food-container">
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
-            </div>
-    <div id="food-text">
-        <h4>The Ship on the Shore</h4>
-        <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne selection so you can enjoy a glass with your oysters by the water.</p>
-        <h4>The Dragonfly</h4>
-        <p>Fancy a cocktail? Why not head down to The Dragonfly which serves many of the old classics such as espresso martini or novelities such as rum cocktails topped with italian meringue.</p>
-        <h4>Mother India</h4>
-        <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
-        <h4>Kampong Ah Lee</h4>
-        <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
-   </div> 
-</div>
-</section>
-<footer class="social-media">
-    <h3 id="footer-text">Catch us on social media for more info on events and offers</h3>
-    <ul>
-        <li>
-            <a href="http://facebook.com" target="_blank" rel="noopener" 
-            aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
-            <a href="http://twitter.com" target="_blank" rel="noopener" 
-            aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
-        </li>
-        <li>
-            <a href="http://instagram.com" target="_blank" rel="noopener" 
-            aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-        </li>
-    </ul>
-</footer>
+        </div>
+        <div id="food-text">
+            <h4>The Ship on the Shore</h4>
+            <p>The Ship on the Shore offers the best of Scottish seafood. It has an excellent wine and champagne
+                selection so you can enjoy a glass with your oysters by the water.</p>
+            <h4>The Dragonfly</h4>
+            <p>Fancy a cocktail? Why not head down to The Dragonfly which serves many of the old classics such as
+                espresso martini or novelities such as rum cocktails topped with italian meringue.</p>
+            <h4>Mother India</h4>
+            <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of
+                Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
+            <h4>Kampong Ah Lee</h4>
+            <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska
+                soup. This resturant also sports an extensive bubble tea menu. Like Mother India, this wee gem is
+                located in the Newington area of Edinburgh.</p>
+        </div>
+        </div>
+    </section>
+    <footer class="social-media">
+        <h3 id="footer-text">Catch us on social media for more info on events and offers</h3>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
