--- a/newsletter.html
+++ b/newsletter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,75 +10,82 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Edinburgh travel</title>
 </head>
+
 <body>
     <section>
         <header>
-                <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="newsletter.html">Newsletter</a> 
-                        </li>
-                        <li>
-                            <a href="travel.html">Travel advice</a>  
-                        </li>
-                        <li>
-                            <a href="eat.html">Eat+Drink</a>  
-                        </li>
-                        <li>
-                            <a href="todo.html">Events</a> 
-                        </li>
-                        <li>
-                            <a href="index.html">Home</a> 
-                        </li>
-                    </ul>
-                </nav>
-                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
-            </header>
-            </section>
-<section>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="newsletter.html">Newsletter</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel advice</a>
+                    </li>
+                    <li>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="todo.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="index.html" id="love-edinburgh">
+                <h1>Love Edinburgh</h1>
+            </a>
+        </header>
+    </section>
+    <section>
         <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
-        <div id="form-text-container">
-            <!-- can perhaps target input elements with class atribute -->
-            <!-- can target form element with class -->
-    <form method="POST" action="#"> 
-        <div id="form-heading">
-            <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh</h4>
+            <div id="form-text-container">
+                <!-- can perhaps target input elements with class atribute -->
+                <!-- can target form element with class -->
+                <form method="POST" action="#">
+                    <div id="form-heading">
+                        <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
+                        </h4>
+                    </div>
+                    <br>
+                    <div id="newsletter-form">
+                        <label for="fname">First name</label>
+                        <input type="text" id="fname" name="fname" required>
+                        <br>
+                        <label for="lname">Last name</label>
+                        <input type="text" id="fname" name="lname" required>
+                        <br>
+                        <label for="email">Email address</label>
+                        <input type="email" id="email" name="email" required>
+                        <br>
+                        <input type="submit" value="Submit" class="signup-button">
+                    </div>
+
+                </form>
+            </div>
         </div>
-        <br>
-        <div id="newsletter-form">
-            <label for="fname">First name</label>
-            <input type="text" id="fname" name="fname" required>
-            <br>
-            <label for="lname">Last name</label>
-            <input type="text" id="fname" name="lname" required>
-            <br>
-            <label for="email">Email address</label>
-            <input type="email" id="email" name="email" required>
-            <br>
-            <input type="submit" value="Submit" class="signup-button">
-        </div>
-       
-    </form>
-</div>
-</div>
-</section>
-<footer class="social-media">
-    <h3>Catch us on social media for more info on events and offers</h3>
-    <ul>
-        <li>
-            <a href="http://facebook.com" target="_blank" rel="noopener" 
-            aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
-            <a href="http://twitter.com" target="_blank" rel="noopener" 
-            aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
-        </li>
-        <li>
-            <a href="http://instagram.com" target="_blank" rel="noopener" 
-            aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-        </li>
-    </ul>
-</footer>
-<script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
+    </section>
+    <footer class="social-media">
+        <h3>Catch us on social media for more info on events and offers</h3>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
