Changes in response to html validator

--- a/travel.html
+++ b/travel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,62 +10,78 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Edinburgh travel</title>
 </head>
+
 <body>
     <section>
         <header>
-                <nav>
-                    <ul id="menu">
-                        <li>
-                            <a href="newsletter.html">Newsletter</a> 
-                        </li>
-                        <li>
-                            <a href="travel.html">Travel advice</a>  
-                        </li>
-                        <li>
-                            <a href="eat.html">Eat+Drink</a>  
-                        </li>
-                        <li>
-                            <a href="todo.html">Events</a> 
-                        </li>
-                        <li>
-                            <a href="index.html">Home</a> 
-                        </li>
-                    </ul>
-                </nav>
-                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
-            </header>
-            </section>
-            <section id="travel-outer">
-                <div id="edin-travel" role="img" aria-label="Edinburgh view from princes street with pedestrians and bus in background">
-                    <div id="travel-div">
-                        <div id="travel-text">
-                            <h2>Edinburgh Travel Advice</h2>
-                            <h3>To Edinburgh</h3>
-                            <p>Edinburgh airport hosts many international flights. Getting from the airport to the city centre is easy - you can choose from the 100 bus or take the tram straight from the airport. It only takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want cheaper flight options we'd recommend travelling from Glasgow Prestwick airport. There are many train services from Glasgow to Edinburgh.</p>
-                            <h3>Travelling within Edinburgh</h3>
-                            <p>There are many bus services within Edinburgh taking you all across the city and beyond. You can get travel between the south and north of Edinburgh via the 49 or 14 buses from Waverley station. You can travel to the south to the west via the 47 bus or north to east using the 12 bus to Seafield. Fancy a walk? Take the 15 towards Easter Bush, which will take you right to the doorstep of the Pentland Hills.</p>
-                        </div>
-                    </div>
-                 
-                </div>
-            </section>
-            <footer class="social-media">
-                <h3>Catch us on social media for more info on events and offers</h3>
-                <ul>
+            <nav>
+                <ul id="menu">
                     <li>
-                        <a href="http://facebook.com" target="_blank" rel="noopener" 
-                        aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="newsletter.html">Newsletter</a>
                     </li>
                     <li>
-                        <a href="http://twitter.com" target="_blank" rel="noopener" 
-                        aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
+                        <a href="travel.html">Travel advice</a>
                     </li>
                     <li>
-                        <a href="http://instagram.com" target="_blank" rel="noopener" 
-                        aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="eat.html">Eat+Drink</a>
+                    </li>
+                    <li>
+                        <a href="todo.html">Events</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
-            </footer>
-        <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
+            </nav>
+            <a href="index.html" id="love-edinburgh">
+                <h1>Love Edinburgh</h1>
+            </a>
+        </header>
+    </section>
+    <section id="travel-outer">
+        <div id="edin-travel" role="img"
+            aria-label="Edinburgh view from princes street with pedestrians and bus in background">
+            <div id="travel-div">
+                <div id="travel-text">
+                    <h2>Edinburgh Travel Advice</h2>
+                    <h3>To Edinburgh</h3>
+                    <p>Edinburgh airport hosts many international flights. Getting from the airport to the city centre
+                        is easy - you can choose from the 100 bus or take the tram straight from the airport. It only
+                        takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want
+                        cheaper flight options we'd recommend travelling from Glasgow Prestwick airport. There are many
+                        train services from Glasgow to Edinburgh.</p>
+                    <h3>Travelling within Edinburgh</h3>
+                    <p>There are many bus services within Edinburgh taking you all across the city and beyond. You can
+                        get travel between the south and north of Edinburgh via the 49 or 14 buses from Waverley
+                        station. You can travel to the south to the west via the 47 bus or north to east using the 12
+                        bus to Seafield. Fancy a walk? Take the 15 towards Easter Bush, which will take you right to the
+                        doorstep of the Pentland Hills.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer class="social-media">
+        <h3>Catch us on social media for more info on events and offers</h3>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
