--- a/index.html
+++ b/index.html
@@ -50,30 +50,28 @@
             </div>
         </div>
     </section>
-    <section>
-        <div id="welcome-video">
-            <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-    </section>
+    <div id="welcome-video">
+        <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
     <footer class="social-media">
         <h3>Catch us on social media for more info on events and offers</h3>
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit our facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></i></a>
+                    aria-label="Visit our twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit our instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     </footer>
