--- a/newsletter.html
+++ b/newsletter.html
@@ -41,8 +41,6 @@
     <section>
         <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
             <div id="form-text-container">
-                <!-- can perhaps target input elements with class atribute -->
-                <!-- can target form element with class -->
                 <form method="POST" action="#">
                     <div id="form-heading">
                         <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
@@ -71,17 +69,18 @@
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit our facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></i></a>
+                    aria-label="Visit our twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit our instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     </footer>
