--- a/todo.html
+++ b/todo.html
@@ -73,17 +73,18 @@
         <ul>
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit our facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></i></a>
+                    aria-label="Visit our twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit our instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     </footer>
