Readme file restructured for clarity

--- a/newsletter.html
+++ b/newsletter.html
@@ -39,9 +39,9 @@
         </header>
     </section>
     <section>
-        <div id="form-image" role="img" aria-label="View of dance festival crowd with DJ hand in the air">
+        <div id="form-image" role="img" aria-label="View of concernt stage from the perspective of a member of the audience">
             <div id="form-text-container">
-                <form method="POST" action="#">
+                <form method="POST" action="https://formdump.codeinstitute.net/">
                     <div id="form-heading">
                         <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
                         </h4>
@@ -52,7 +52,7 @@
                         <input type="text" id="fname" name="fname" required>
                         <br>
                         <label for="lname">Last name</label>
-                        <input type="text" id="fname" name="lname" required>
+                        <input type="text" id="lname" name="lname" required>
                         <br>
                         <label for="email">Email address</label>
                         <input type="email" id="email" name="email" required>
